--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,49 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.square {
+  border: 1px solid black;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.selected {
+  border: 5px solid green;
+}
+
+.available-move {
+  border: 5px solid rgb(229, 151, 151);
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
+}
+
+.piece {
+  font-size: 50px;
+}
+
+.white {
+  background-color: white;
+}
+.black {
+  background-color: gray;
+}
+
+.board {
+  margin: 10px auto;
+  width: 640px;
+  height: 640px;
+  display: grid;
+  grid-template-columns: repeat(8, 80px);
+  grid-template-rows: repeat(8, 80px);
 }
