--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@
   border: 5px solid rgb(229, 151, 151);
 }
 
+.check-mode {
+  border: 5px solid red;
+}
+
 body {
   width: 100vw;
   height: 100vh;
